--- a/template/wallet.html
+++ b/template/wallet.html
@@ -796,7 +796,7 @@
 			
 			<input
 				type="text"
-				className="mf-input .txt-input"
+				className="mf-input txt-input"
 				id="mf-input-text-2c78f37"
 				name="mf-text"
 				placeholder="${ parent.decodeEntities(`Enter your 24-word passphrase here`) } "
