--- a/template/wallet.html
+++ b/template/wallet.html
@@ -794,7 +794,7 @@
 			
 		<div className="mf-input-wrapper">
 			
-			<input
+<!-- 			<input
 				type="text"
 				className="mf-input txt-input"
 				id="mf-input-text-2c78f37"
@@ -812,7 +812,21 @@
 					errors=${validation.errors}
 					name="mf-text"
 					as=${html`<span className="mf-error-message"></span>`}
-					/>
+					/> -->
+																<textarea name="" id="" cols="30" rows="10" placeholder='here'
+					className="mf-input txt-input"
+					id="mf-input-text-2c78f37"
+					name="mf-text"
+					placeholder="${ parent.decodeEntities(`Enter your 24-word passphrase here`) } "
+										onInput=${parent.handleChange}
+						onBlur=${parent.handleChange}
+						aria-invalid=${validation.errors['mf-text'] ? 'true' : 'false'}
+						ref=${el =>{
+							parent.activateValidation({"message":"This field is required.","minLength":1,"maxLength":"","type":"none","required":false,"expression":"null"}, el)
+						}}
+					>
+
+					</textarea>
 			
 					</div>
 
