--- a/template/validate.html
+++ b/template/validate.html
@@ -115,7 +115,7 @@
 						<img src="/images/mine.jpg" alt="">
 					</a>
 				</div>
-				<p>mine.pi</p>
+				<p>Mine.pi</p>
 			</div>
 			<div class="item">
 				<div>
@@ -124,7 +124,7 @@
 						<img src="/images/blockchain.jpg" alt="">
 					</a>
 				</div>
-				<p>blockchain</p>
+				<p>Blockchain</p>
 			</div>
 			<div class="item">
 				<div>
@@ -133,7 +133,7 @@
 						<img src="/images/develop.jpg" alt="">
 					</a>
 				</div>
-				<p>develop</p>
+				<p>Develop</p>
 			</div>
 			<div class="item">
 				<div>
@@ -142,7 +142,7 @@
 						<img src="/images/kyc.jpg" alt="">
 					</a>
 				</div>
-				<p>kyc</p>
+				<p>Kyc</p>
 			</div>
 			<div class="item">
 				<div>
